CMAKE_MINIMUM_REQUIRED ( VERSION 2.8 )

PROJECT ( YAP_UDI_RTREE )

FIND_PACKAGE(YAP REQUIRED)
IF (NOT YAP_FOUND)
  MESSAGE (SEND_ERROR "YAP was not found!")
ENDIF (NOT YAP_FOUND)

INCLUDE_DIRECTORIES(
     .
)

SET ( SOURCES
	rtree.c
	rtree_udi.c
  )

ADD_LIBRARY(udi_rtree SHARED ${SOURCES})

INSTALL(TARGETS udi_rtree DESTINATION ${YAP_PL_LIBRARY_DIR})
INSTALL(FILES rtree.yap DESTINATION ${YAP_PL_LIBRARY_DIR})
